Add and remove friends

--- a/app/views/friends/_result.html.erb
+++ b/app/views/friends/_result.html.erb
@@ -6,25 +6,27 @@
 <% end %>
 
 <% if @users %>
-  <div id='friend-lookup-results' class='well results-block col-md-10'>
-    <table class='search-results-table col-md-12'>
-      <tbody>
-        <% @users.each do |user| %>
-          <tr>
-            <td><strong>Name:</strong><%= user.full_name %></td>
-            <td><strong>Email:</strong><%= user.email %></td>
-            <td><strong>Profile:</strong><%= link_to "View Profile", "#", class: 'btn btn-xs btn-success' %></td>
-            <% if current_user.not_friends_with?(user.id) %>
-              <td><%= link_to "Add a Friend", add_friend_path(user: current_user, friend: user), class: 'btn btn-xs btn-success',
-                                        method: :post %></td>
-            <% else %>
-              <td class='label label-primary'>
-                You are already friends
-              </td>
-            <% end %>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
+  <% if @users.size > 0 %>
+    <div id='friend-lookup-results' class='well results-block col-md-10'>
+      <table class='search-results-table col-md-12'>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td><strong>Name:</strong><%= user.full_name %></td>
+              <td><strong>Email:</strong><%= user.email %></td>
+              <td><strong>Profile:</strong><%= link_to "View Profile", "#", class: 'btn btn-xs btn-success' %></td>
+              <% if current_user.not_friends_with?(user.id) %>
+                <td><%= link_to "Add a Friend", add_friend_path(user: current_user, friend: user), class: 'btn btn-xs btn-success',
+                                          method: :post %></td>
+              <% else %>
+                <td class='label label-primary'>
+                  You are already friends
+                </td>
+              <% end %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  <% end %>
 <% end %>
