--- a/app/views/friends/_result.html.erb
+++ b/app/views/friends/_result.html.erb
@@ -14,7 +14,7 @@
             <tr>
               <td><strong>Name:</strong><%= user.full_name %></td>
               <td><strong>Email:</strong><%= user.email %></td>
-              <td><strong>Profile:</strong><%= link_to "View Profile", "#", class: 'btn btn-xs btn-success' %></td>
+              <td><strong>Profile:</strong><%= link_to "View Profile", user_path(user), class: 'btn btn-xs btn-success' %></td>
               <% if current_user.not_friends_with?(user.id) %>
                 <td><%= link_to "Add a Friend", add_friend_path(user: current_user, friend: user), class: 'btn btn-xs btn-success',
                                           method: :post %></td>
